<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.idbi</groupId>
    <artifactId>HCFCica</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>

    <name>HCFPlugin</name>

    <description>FÜR PLAYERS WO WANNA PLAY some HCF</description>
    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <build>
        <finalName>HCF+</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
               <!-- <artifactId>maven-compiler-plugin</artifactId> -->
                <artifactId>maven-jar-plugin</artifactId>
                <!--<version>3.8.1</version>
                <version>2.3.1</version>-->
                <configuration>
                    <!--<source>${java.version}</source>
                    <target>${java.version}</target> -->
                    <!--<outputDirectory>C:\Users\kille\Desktop\HCFPlus\TsipuEgymeleg\plugins</outputDirectory> -->
                    <outputDirectory>C:\Users\kille\Desktop\HCFPlus\TsipuEgymeleg\plugins</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.0</version> <!--MEOW-->
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>true</createDependencyReducedPom>
                            <minimizeJar>false</minimizeJar> <!--MEOW-->
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>papermc-repo</id>
            <url>https://papermc.io/repo/repository/maven-public/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
        </repository>
        <repository>
            <id>codecrafter47-repo</id>
            <url>https://nexus.codecrafter47.de/content/repositories/public/</url>
        </repository>
        <repository>
            <id>codemc-snapshots</id>
            <url>https://repo.codemc.io/repository/maven-snapshots/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>krypton</id>
            <url>https://repo.kryptonmc.org/releases</url>
        </repository>
        <repository>
            <id>alvinb-repo</id>
            <url>http://repo.bringholm.com/</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>org.github.paperspigot</groupId>
            <artifactId>paperspigot-api</artifactId>
            <version>1.8.8-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
          <version>20140107</version>
        <!--<version>20140107</version> -->
    </dependency>
    <!--<dependency>
        <groupId>me.idbi</groupId>
        <artifactId>HCFCica</artifactId>
        <version>1.0</version>
    </dependency>-->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.8.8-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.26</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.wesjd</groupId>
            <artifactId>anvilgui</artifactId>
            <version>1.5.3-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.bukkit</groupId>
            <artifactId>craftbukkit</artifactId>
            <version>1.8.8-R0.1-SNAPSHOT</version>
            <systemPath>C:\Users\kille\Desktop\BuildTools\craftbukkit-1.8.8.jar</systemPath>
            <scope>system</scope>
        </dependency>
        <dependency>
            <groupId>me.idbi</groupId>
            <artifactId>hcf_abilitys</artifactId>
            <version>1.0</version>
            <systemPath>C:\Users\kille\Desktop\HCFPlus\TsipuEgymeleg\plugins\HCF+ Abilities.jar</systemPath>
            <scope>system</scope>
        </dependency>
        <dependency>
            <groupId>com.lunarclient</groupId>
            <artifactId>bukkitapi</artifactId>
            <version>1.0-SNAPSHOT</version>
            <systemPath>C:\Users\kille\Desktop\HCFPlus\TsipuEgymeleg\plugins\bukkitapi.jar</systemPath>
            <scope>system</scope>
        </dependency>
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.thekeenant</groupId>
            <artifactId>tabbed</artifactId>
            <version>v1.8</version>
        </dependency>
        <dependency>
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>4.8.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>
